After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690184 - [parsers] Return too strict caps on the sinkpads
[parsers] Return too strict caps on the sinkpads
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.x
Other Linux
: Normal normal
: 1.0.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-14 00:44 UTC by Jens Georg
Modified: 2012-12-22 09:41 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jens Georg 2012-12-14 00:44:39 UTC
0:00:00.255443541  3065      0x27324a0 WARN            audioencoder gstaudioencoder.c:2656:gst_audio_encoder_set_output_format:<avenc_mp2-0> refused caps audio/mpeg, channels=(int)2, rate=(int)48000, mpegversion=(int)1, layer=(int)2, mpegaudioversion=(int)[ 1, 3 ], channel-mask=(bitmask)0x0000000000000003
0:00:00.255614465  3065      0x27324a0 WARN            audioencoder gstaudioencoder.c:1199:gst_audio_encoder_chain:<avenc_mp2-0> error: encoder not initialized

Same sample code as in bug 690132, just with GstTwoLame.prs moved out of the way and avenc_mp2.prs added.

GST_DEBUG=TRACE log available but too large to attach, even when packed.
Comment 1 Sebastian Dröge (slomo) 2012-12-17 12:56:25 UTC
0:00:00.036970713 29550      0x25d2980 ERROR              encodebin gstencodebin.c:1392:_create_stream_group:<encodebin0> Couldn't create encoder for format audio/mpeg, mpegversion=(int)1, layer=(int)2


Fails with this for me now, both with twolame and avenc_mp2.
Comment 2 Tim-Philipp Müller 2012-12-17 13:03:04 UTC
Also see bug #690240, might be related.
Comment 3 Sebastian Dröge (slomo) 2012-12-17 13:19:18 UTC
Ah, because of bug #690240. Now I have the original bug here
Comment 4 Sebastian Dröge (slomo) 2012-12-17 14:05:39 UTC
commit 26040ee38cb9e7c42f3d9a0282b3e5cace7ca42d
Author: Sebastian Dröge <sebastian.droege@collabora.co.uk>
Date:   Mon Dec 17 15:01:02 2012 +0100

    audioparsers: Use the peer caps for restrictions instead of the srcpad allowed caps
    
    Otherwise we will intersect with the srcpad template caps and add all the caps fields
    that the parser will ever set, no matter if downstream restricts this field or not.
    This requires upstream to set this field on the caps to successfully negotiate.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=690184


commit 9f1257330db0928bd86de541689cf67da51694fa
Author: Sebastian Dröge <sebastian.droege@collabora.co.uk>
Date:   Mon Dec 17 15:04:44 2012 +0100

    videoparsers: Use the peer caps for restrictions instead of the srcpad allowed caps
    
    Otherwise we will intersect with the srcpad template caps and add all the caps fields
    that the parser will ever set, no matter if downstream restricts this field or not.
    This requires upstream to set this field on the caps to successfully negotiate.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=690184
Comment 5 Sebastian Dröge (slomo) 2012-12-22 09:41:00 UTC
Also backported to the 1.0 branch now